<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/goback_button"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:text="Chào mừng bạn"
        android:textColor="@color/button_purple"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif"
        android:text="Đăng nhập để tiếp tục"
        android:textColor="@color/button_purple"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:importantForAutofill="no"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:background="@drawable/round_input"
            android:hint="@string/account"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:background="@drawable/round_input"
            android:hint="@string/pass"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@color/button_purple"
        android:textSize="18sp"
        android:fontFamily="sans-serif"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.940"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_pass" />

    <Button
        android:id="@+id/btnLogIn_logIn"
        android:layout_marginTop="65dp"
        android:background="@drawable/round_button"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:onClick="logIn"
        android:text="@string/login"
        android:fontFamily="sans-serif"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_pass" />
    <Button
        android:id="@+id/btnsignUp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:onClick="logIn"
        android:text="@string/signup"
        android:fontFamily="sans-serif"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn_logIn" />

</androidx.constraintlayout.widget.ConstraintLayout>